codegen/5.3.0/docs/View.md
# View

## Properties
Name | Type | Description | Notes
------------ | ------------- | ------------- | -------------
**Id** | **int32** | A uniqe ID used to identify the View | [optional] [default to null]
**Guid** | **string** | A uniqe GUID assigned to the View | [optional] [default to null]
**Name** | **string** | A uniq name given to the view | [optional] [default to null]
**Path** | **string** | File system path. Begin with &#x27;/&#x27;. Do not include a trailing slash | [default to null]
**CreateDir** | **bool** | Creates the directory specified by the path | [optional] [default to null]
**Alias** | **string** | Alias for NFS export, must start with &#x27;/&#x27; and only ASCII characters are allowed. If configured, this supersedes the exposed NFS export path | [optional] [default to null]
**Bucket** | **string** | S3 Bucket name | [optional] [default to null]
**PolicyId** | **int32** | Associated view policy ID | [optional] [default to null]
**Cluster** | **string** | Parent Cluster | [optional] [default to null]
**ClusterId** | **int32** | Parent Cluster ID | [optional] [default to null]
**TenantId** | **int32** | The tenant ID related to this view | [optional] [default to null]
**Directory** | **bool** | Create the directory if it does not exist | [optional] [default to null]
**S3Versioning** | **bool** | Trun on S3 Versioning | [optional] [default to null]
**S3UnverifiedLookup** | **bool** | Allow S3 Unverified Lookup | [optional] [default to null]
**AllowAnonymousAccess** | **bool** | Allow S3 anonymous access | [optional] [default to null]
**AllowS3AnonymousAccess** | **bool** | Allow S3 anonymous access | [optional] [default to null]
**Protocols** | **[]string** | Protocols exposed by this view | [optional] [default to null]
**Share** | **string** | Name of the SMB Share. Must not include the following characters: \&quot; \\ / [ ] : | &lt; &gt; + &#x3D; ; , * ? | [optional] [default to null]
**BucketOwner** | **string** | S3 Bucket owner | [optional] [default to null]
**BucketCreators** | **[]string** | List of bucket creators users | [optional] [default to null]
**BucketCreatorsGroups** | **[]string** | List of bucket creators groups | [optional] [default to null]
**S3Locks** | **bool** | S3 Object Lock | [optional] [default to null]
**S3LocksRetentionMode** | **string** | S3 Locks retention mode | [optional] [default to null]
**S3LocksRetentionPeriod** | **string** | Period should be positive in format like 0d|2d|1y|2y | [optional] [default to null]
**PhysicalCapacity** | **int64** | Physical Capacity | [optional] [default to null]
**LogicalCapacity** | **int64** | Logical Capacity | [optional] [default to null]
**NfsInteropFlags** | **string** | Indicates whether the view should support simultaneous access to NFS3/NFS4/SMB protocols. | [optional] [default to null]
**IsRemote** | **bool** |  | [optional] [default to null]
**ShareAcl** | [***ViewShareAcl**](View_share_acl.md) |  | [optional] [default to null]
**QosPolicyId** | **int32** | QoS Policy ID | [optional] [default to null]
**IsSeamless** | **bool** | Supports seamless failover between replication peers by syncing file handles between the view and remote views on the replicated path on replication peers. This enables NFSv3 client users to retain the same mount point to the view in the event of a failover of the view path to a replication peer. This feature enables NFSv3 client users to retain the same mount point to the view in the event of a failover of the view path to a replication peer. Enabling this option may cause overhead and should only be enabled when the use case is relevant. To complete the configuration for seamless failover between any two peers, a seamless view must be created on each peer. | [optional] [default to null]
**MaxRetentionPeriod** | **string** | Applicable if locking is enabled. Sets a maximum retention period for files that are locked in the view. Files cannot be locked for longer than this period, whether they are locked manually (by setting the atime) or automatically, using auto-commit. Specify as an integer value followed by a letter for the unit (m - minutes, h - hours, d - days, y - years). Example: 2y (2 years). | [optional] [default to null]
**MinRetentionPeriod** | **string** | Applicable if locking is enabled. Sets a minimum retention period for files that are locked in the view. Files cannot be locked for less than this period, whether locked manually (by setting the atime) or automatically, using auto-commit. Specify as an integer value followed by a letter for the unit (h - hours, d - days, m - months, y - years). Example: 1d (1 day). | [optional] [default to null]
**FilesRetentionMode** | **string** | Applicable if locking is enabled. The retention mode for new files. For views enabled for NFSv3 or SMB, if locking is enabled, files_retention_mode must be set to GOVERNANCE or COMPLIANCE. If the view is enabled for S3 and not for NFSv3 or SMB, files_retention_mode can be set to NONE. If GOVERNANCE, locked files cannot be deleted or changed. The Retention settings can be shortened or extended by users with sufficient permissions. If COMPLIANCE, locked files cannot be deleted or changed. Retention settings can be extended, but not shortened, by users with sufficient permissions. If NONE (S3 only), the retention mode is not set for the view; it is set individually for each object. | [optional] [default to null]
**DefaultRetentionPeriod** | **string** | Relevant if locking is enabled. Required if s3_locks_retention_mode is set to governance or compliance. Specifies a default retention period for objects in the bucket. If set, object versions that are placed in the bucket are automatically protected with the specified retention lock. Otherwise, by default, each object version has no automatic protection but can be configured with a retention period or legal hold. Specify as an integer followed by h for hours, d for days, m for months, or y for years. For example: 2d or 1y. | [optional] [default to null]
**AutoCommit** | **string** | Applicable if locking is enabled. Sets the auto-commit time for files that are locked automatically. These files are locked automatically after the auto-commit period elapses from the time the file is saved. Files locked automatically are locked for the default-retention-period, after which they are unlocked. Specify as an integer value followed by a letter for the unit (h - hours, d - days, y - years). Example: 2h (2 hours). | [optional] [default to null]
**S3ObjectOwnershipRule** | **string** |  | [optional] [default to null]
**Locking** | **bool** | Write Once Read Many (WORM) locking enabled | [optional] [default to null]
**IgnoreOos** | **bool** | Ignore oos | [optional] [default to null]
**BucketLogging** | [***BucketLogging**](BucketLogging.md) |  | [optional] [default to null]
**AbacTags** | **[]string** | List of attribute based access control tags, this option can be used only when using SMB/NFSv4 protocols | [optional] [default to null]
**AbeMaxDepth** | **int32** | Restricts ABE to a specified path depth. For example, if max depth is 3, ABE does not affect paths deeper than three levels. If not specified, ABE affects all path depths. | [optional] [default to null]
**AbeProtocols** | **[]string** | The protocols for which Access-Based Enumeration (ABE) is enabled , allowed values [ NFS, SMB, NFS4, S3 ] | [optional] [default to null]
**IsDefaultSubsystem** | **bool** | Set as the default subsystem view for block devices (sub-system) | [optional] [default to null]
**EventNotifications** | [**[]ViewEventNotification**](ViewEventNotification.md) | List of S3 event notifications defentions | [optional] [default to null]
**KafkaVipPools** | **[]int64** | When setting view protocol to KAKFA at least on one vippool from the type of protocols should be defined | [optional] [default to null]

[[Back to Model list]](../README.md#documentation-for-models) [[Back to API list]](../README.md#documentation-for-api-endpoints) [[Back to README]](../README.md)

